# wallet-service/src/main/java/aq/project/utils/handlers/TransactionHandler.java
@@ -4,7 +4,6 @@ import aq.project.dto.TransactionStatus;
 import aq.project.entities.transaction.DepositTransaction;
 import aq.project.entities.transaction.TransferTransaction;
 import aq.project.entities.transaction.WithdrawTransaction;
-import aq.project.exceptions.DuplicateTransactionHandleException;
 import aq.project.repositories.transaction.DepositTransactionRepository;
 import aq.project.repositories.transaction.TransferTransactionRepository;
 import aq.project.repositories.transaction.WithdrawTransactionRepository;
@@ -12,8 +11,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.UUID;
 
 @Component
 @RequiredArgsConstructor
@@ -57,26 +54,5 @@ public class TransactionHandler {
     public void commitFailedTransaction(TransferTransaction transaction) {
         transaction.setStatus(TransactionStatus.FAILED);
         transferTransactionRepository.save(transaction);
-    }
-
-    @Transactional
-    public void checkDepositTransactionPresent(UUID transactionId) {
-        if(depositTransactionRepository.findById(transactionId).isPresent())
-            throw new DuplicateTransactionHandleException(String
-                    .format("Attempt to handle duplicate of deposit transaction with id: [%s]", transactionId));
-    }
-
-    @Transactional
-    public void checkWithdrawTransactionPresent(UUID transactionId) {
-        if(withdrawTransactionRepository.findById(transactionId).isPresent())
-            throw new DuplicateTransactionHandleException(String
-                    .format("Attempt to handle duplicate of withdraw transaction with id: [%s]", transactionId));
-    }
-
-    @Transactional
-    public void checkTransferTransactionPresent(UUID transactionId) {
-        if(transferTransactionRepository.findById(transactionId).isPresent())
-            throw new DuplicateTransactionHandleException(String
-                    .format("Attempt to handle duplicate of transfer transaction with id: [%s]", transactionId));
     }
 }
