# wallet-service/src/main/java/aq/project/utils/mappers/transaction/TransactionRequestMapper.java
@@ -4,9 +4,9 @@ import aq.project.entities.transaction.DepositTransaction;
 import aq.project.entities.transaction.TransactionMetadata;
 import aq.project.entities.transaction.TransferTransaction;
 import aq.project.entities.transaction.WithdrawTransaction;
-import aq.project.dto.DepositTransactionRequestWalletServiceDto;
-import aq.project.dto.TransferTransactionRequestWalletServiceDto;
-import aq.project.dto.WithdrawTransactionRequestWalletServiceDto;
+import aq.project.dto.WalletServiceDepositTransactionRequestDto;
+import aq.project.dto.WalletServiceTransferTransactionRequestDto;
+import aq.project.dto.WalletServiceWithdrawTransactionRequestDto;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.factory.Mappers;
@@ -20,9 +20,9 @@ public interface TransactionRequestMapper {
     @Mapping(target = "walletId", source = "walletId")
     @Mapping(target = "status", source = "transactionStatus")
     @Mapping(target = "metadata", expression = "java(toMetadata(request))")
-    DepositTransaction toDepositTransaction(DepositTransactionRequestWalletServiceDto request);
+    DepositTransaction toDepositTransaction(WalletServiceDepositTransactionRequestDto request);
 
-    default TransactionMetadata toMetadata(DepositTransactionRequestWalletServiceDto request) {
+    default TransactionMetadata toMetadata(WalletServiceDepositTransactionRequestDto request) {
         TransactionMetadata metadata = new TransactionMetadata();
         metadata.setTraceId(request.getTraceId());
         metadata.setTimestamp(request.getTimestamp());
@@ -33,9 +33,9 @@ public interface TransactionRequestMapper {
     @Mapping(target = "walletId", source = "walletId")
     @Mapping(target = "status", source = "transactionStatus")
     @Mapping(target = "metadata", expression = "java(toMetadata(request))")
-    WithdrawTransaction toWithdrawTransaction(WithdrawTransactionRequestWalletServiceDto request);
+    WithdrawTransaction toWithdrawTransaction(WalletServiceWithdrawTransactionRequestDto request);
 
-    default TransactionMetadata toMetadata(WithdrawTransactionRequestWalletServiceDto request) {
+    default TransactionMetadata toMetadata(WalletServiceWithdrawTransactionRequestDto request) {
         TransactionMetadata metadata = new TransactionMetadata();
         metadata.setTraceId(request.getTraceId());
         metadata.setTimestamp(request.getTimestamp());
@@ -47,9 +47,9 @@ public interface TransactionRequestMapper {
     @Mapping(target = "recipientWalletId", source = "recipientWalletId")
     @Mapping(target = "status", source = "transactionStatus")
     @Mapping(target = "metadata", expression = "java(toMetadata(request))")
-    TransferTransaction toTransferTransaction(TransferTransactionRequestWalletServiceDto request);
+    TransferTransaction toTransferTransaction(WalletServiceTransferTransactionRequestDto request);
 
-    default TransactionMetadata toMetadata(TransferTransactionRequestWalletServiceDto request) {
+    default TransactionMetadata toMetadata(WalletServiceTransferTransactionRequestDto request) {
         TransactionMetadata metadata = new TransactionMetadata();
         metadata.setTraceId(request.getTraceId());
         metadata.setTimestamp(request.getTimestamp());
